--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,6 +58,7 @@
      <Compile Include="Assets\Scripts\PlayerController.cs" />
      <Compile Include="Assets\Scripts\GoDown.cs" />
      <Compile Include="Assets\Scripts\GoUp.cs" />
+     <Compile Include="Assets\Scripts\Laser.cs" />
      <None Include="Assets\Materials\Shaders\StarNestSkybox.shader" />
      <None Include="Assets\Materials\Shaders\StarNest.shader" />
  <Reference Include="UnityEngine">
