--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,6 +64,7 @@
      <Compile Include="Assets\Scripts\GoPlay.cs" />
      <Compile Include="Assets\Scripts\GoMenu.cs" />
      <Compile Include="Assets\Scripts\Fragment.cs" />
+     <Compile Include="Assets\Scripts\FragmentsScore.cs" />
      <None Include="Assets\Materials\Shaders\StarNestSkybox.shader" />
      <None Include="Assets\Materials\Shaders\StarNest.shader" />
  <Reference Include="UnityEngine">
