--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -52,19 +52,22 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\Player.cs" />
-     <Compile Include="Assets\Scripts\GoLeft.cs" />
-     <Compile Include="Assets\Scripts\GoRight.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
-     <Compile Include="Assets\Scripts\GoDown.cs" />
-     <Compile Include="Assets\Scripts\GoUp.cs" />
      <Compile Include="Assets\Scripts\Laser.cs" />
-     <Compile Include="Assets\Scripts\Asteroid.cs" />
-     <Compile Include="Assets\Scripts\EnemiesSpawn.cs" />
-     <Compile Include="Assets\Scripts\GoPlay.cs" />
+     <Compile Include="Assets\Scripts\GoUp.cs" />
+     <Compile Include="Assets\Scripts\GoRight.cs" />
      <Compile Include="Assets\Scripts\GoMenu.cs" />
-     <Compile Include="Assets\Scripts\Fragment.cs" />
+     <Compile Include="Assets\Scripts\GoDown.cs" />
+     <Compile Include="Assets\Scripts\GoLeft.cs" />
+     <Compile Include="Assets\Scripts\GoPlay.cs" />
+     <Compile Include="Assets\Scripts\Asteroid.cs" />
+     <Compile Include="Assets\Scripts\Player.cs" />
+     <Compile Include="Assets\Scripts\ShopContent.cs" />
      <Compile Include="Assets\Scripts\FragmentsScore.cs" />
+     <Compile Include="Assets\Scripts\Fragment.cs" />
+     <Compile Include="Assets\Scripts\EnemiesSpawn.cs" />
+     <Compile Include="Assets\Scripts\BuySpeed.cs" />
+     <Compile Include="Assets\Scripts\GoShop.cs" />
      <None Include="Assets\Materials\Shaders\StarNestSkybox.shader" />
      <None Include="Assets\Materials\Shaders\StarNest.shader" />
  <Reference Include="UnityEngine">
